{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 408,
  "lineage": "b298b2f6-4a4a-9712-0d03-6dc10a97a585",
  "resources": [
    {
      "module": "module.vpc.module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f3f602d23f1659d",
            "arn": "arn:aws:ec2:us-east-1:155988765466:instance/i-05273b7c10293c25b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05273b7c10293c25b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e1fda447a5c1f48a",
            "private_dns": "ip-172-20-10-23.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.10.23",
            "public_ip": "44.200.235.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0201631b6a8503929",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aaf8ab4127a10ef0",
            "tags": {
              "Name": "server1"
            },
            "tags_all": {
              "Name": "server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08cc0ab11323fc3d0"
            ]
          },
          "dependencies": [
            "module.vpc.module.ec2.module.vpc.aws_security_group.vpc_project_security_group",
            "module.vpc.module.ec2.module.vpc.aws_subnet.vpc_project_subnet",
            "module.vpc.module.ec2.module.vpc.aws_vpc.vpc_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_project_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:internet-gateway/igw-07abb41c6caf521f6",
            "id": "igw-07abb41c6caf521f6",
            "owner_id": "155988765466",
            "tags": {
              "Name": "vpc_project_internet_gateway"
            },
            "tags_all": {
              "Name": "vpc_project_internet_gateway"
            },
            "vpc_id": "vpc-0d8da20ff5873aa37"
          },
          "dependencies": [
            "module.vpc.module.ec2.module.vpc.aws_vpc.vpc_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_project_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:route-table/rtb-0a1fadfd8780debc6",
            "id": "rtb-0a1fadfd8780debc6",
            "owner_id": "155988765466",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07abb41c6caf521f6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC_project_route_table"
            },
            "tags_all": {
              "Name": "VPC_project_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8da20ff5873aa37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.ec2.module.vpc.aws_internet_gateway.vpc_project_internet_gateway",
            "module.vpc.module.ec2.module.vpc.aws_vpc.vpc_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_project_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f095cddc1db0fc4",
            "route_table_id": "rtb-0a1fadfd8780debc6",
            "subnet_id": "subnet-0aaf8ab4127a10ef0"
          },
          "dependencies": [
            "module.vpc.module.ec2.module.vpc.aws_internet_gateway.vpc_project_internet_gateway",
            "module.vpc.module.ec2.module.vpc.aws_route_table.vpc_project_routetable",
            "module.vpc.module.ec2.module.vpc.aws_subnet.vpc_project_subnet",
            "module.vpc.module.ec2.module.vpc.aws_vpc.vpc_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_project_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:security-group/sg-08cc0ab11323fc3d0",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08cc0ab11323fc3d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic to VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic to VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic to VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic to VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_project_security_group",
            "name_prefix": "",
            "owner_id": "155988765466",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "securitygroup_controll_traffic"
            },
            "tags_all": {
              "Name": "securitygroup_controll_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8da20ff5873aa37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.ec2.module.vpc.aws_vpc.vpc_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_project_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:subnet/subnet-0aaf8ab4127a10ef0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aaf8ab4127a10ef0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "155988765466",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_project_subnet"
            },
            "tags_all": {
              "Name": "vpc_project_subnet"
            },
            "vpc_id": "vpc-0d8da20ff5873aa37"
          },
          "dependencies": [
            "module.vpc.module.ec2.module.vpc.aws_vpc.vpc_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:vpc/vpc-0d8da20ff5873aa37",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0a1b5346a9d6ef899",
            "default_route_table_id": "rtb-0b4ebf7449b94cc73",
            "default_security_group_id": "sg-09052bf8b4639e6ab",
            "dhcp_options_id": "dopt-0386cf88d51777301",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d8da20ff5873aa37",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b4ebf7449b94cc73",
            "owner_id": "155988765466",
            "tags": {
              "Name": "vpc_project"
            },
            "tags_all": {
              "Name": "vpc_project"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.eks_infrastructure.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.vpc.module.eks_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:security-group/sg-0143ff8dce7b1c7ce",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0143ff8dce7b1c7ce",
            "ingress": [],
            "name": "education-eks-zwtRvQkH-cluster-2023042718575940140000000d",
            "name_prefix": "education-eks-zwtRvQkH-cluster-",
            "owner_id": "155988765466",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "education-eks-zwtRvQkH-cluster"
            },
            "tags_all": {
              "Name": "education-eks-zwtRvQkH-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cbddce6f70837e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.eks_infrastructure.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "module.vpc.module.eks_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:security-group/sg-0d840ac098c159b0b",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0d840ac098c159b0b",
            "ingress": [],
            "name": "education-eks-zwtRvQkH-node-2023042718575937220000000c",
            "name_prefix": "education-eks-zwtRvQkH-node-",
            "owner_id": "155988765466",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "education-eks-zwtRvQkH-node",
              "kubernetes.io/cluster/education-eks-zwtRvQkH": "owned"
            },
            "tags_all": {
              "Name": "education-eks-zwtRvQkH-node",
              "kubernetes.io/cluster/education-eks-zwtRvQkH": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cbddce6f70837e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.eks_infrastructure.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "module.vpc.module.eks_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1022194884",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0143ff8dce7b1c7ce",
            "security_group_rule_id": "sgr-0cec959bfff47070e",
            "self": false,
            "source_security_group_id": "sg-0d840ac098c159b0b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.eks_infrastructure.module.eks.aws_security_group.cluster",
            "module.vpc.module.eks_infrastructure.module.eks.aws_security_group.node",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.eks_infrastructure.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "module.vpc.module.eks_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1835150568",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d840ac098c159b0b",
            "security_group_rule_id": "sgr-0edab9b6ea2c19bf9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.eks_infrastructure.module.eks.aws_security_group.cluster",
            "module.vpc.module.eks_infrastructure.module.eks.aws_security_group.node",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2009517926",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d840ac098c159b0b",
            "security_group_rule_id": "sgr-0defd449e7444f265",
            "self": false,
            "source_security_group_id": "sg-0143ff8dce7b1c7ce",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.eks_infrastructure.module.eks.aws_security_group.cluster",
            "module.vpc.module.eks_infrastructure.module.eks.aws_security_group.node",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1914177617",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d840ac098c159b0b",
            "security_group_rule_id": "sgr-0ab422c2c0a5dfae3",
            "self": false,
            "source_security_group_id": "sg-0143ff8dce7b1c7ce",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.eks_infrastructure.module.eks.aws_security_group.cluster",
            "module.vpc.module.eks_infrastructure.module.eks.aws_security_group.node",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1475980312",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d840ac098c159b0b",
            "security_group_rule_id": "sgr-0c258981c42ee3006",
            "self": false,
            "source_security_group_id": "sg-0143ff8dce7b1c7ce",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.eks_infrastructure.module.eks.aws_security_group.cluster",
            "module.vpc.module.eks_infrastructure.module.eks.aws_security_group.node",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-861446099",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d840ac098c159b0b",
            "security_group_rule_id": "sgr-0f93248e3303f664f",
            "self": false,
            "source_security_group_id": "sg-0143ff8dce7b1c7ce",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.eks_infrastructure.module.eks.aws_security_group.cluster",
            "module.vpc.module.eks_infrastructure.module.eks.aws_security_group.node",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1850691494",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d840ac098c159b0b",
            "security_group_rule_id": "sgr-0148891458ab42bd8",
            "self": false,
            "source_security_group_id": "sg-0143ff8dce7b1c7ce",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.eks_infrastructure.module.eks.aws_security_group.cluster",
            "module.vpc.module.eks_infrastructure.module.eks.aws_security_group.node",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-652527207",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d840ac098c159b0b",
            "security_group_rule_id": "sgr-0a1cb81a9b411b5fe",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.eks_infrastructure.module.eks.aws_security_group.cluster",
            "module.vpc.module.eks_infrastructure.module.eks.aws_security_group.node",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1841928017",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d840ac098c159b0b",
            "security_group_rule_id": "sgr-0efc4f8134f0feece",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.eks_infrastructure.module.eks.aws_security_group.cluster",
            "module.vpc.module.eks_infrastructure.module.eks.aws_security_group.node",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-912902978",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0d840ac098c159b0b",
            "security_group_rule_id": "sgr-03302b44f57f5dfa7",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.eks_infrastructure.module.eks.aws_security_group.cluster",
            "module.vpc.module.eks_infrastructure.module.eks.aws_security_group.node",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.eks_infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.vpc.module.eks_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6c1e8d11649f7a1",
            "domain": "vpc",
            "id": "eipalloc-0a6c1e8d11649f7a1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-205-159-183.compute-1.amazonaws.com",
            "public_ip": "52.205.159.183",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "education-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "education-vpc-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.module.eks_infrastructure.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.eks_infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.vpc.module.eks_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:internet-gateway/igw-0fc326eaed1ad7b59",
            "id": "igw-0fc326eaed1ad7b59",
            "owner_id": "155988765466",
            "tags": {
              "Name": "education-vpc"
            },
            "tags_all": {
              "Name": "education-vpc"
            },
            "vpc_id": "vpc-02cbddce6f70837e0"
          },
          "dependencies": [
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.eks_infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.vpc.module.eks_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6c1e8d11649f7a1",
            "connectivity_type": "public",
            "id": "nat-089526bd0f3bd30fc",
            "network_interface_id": "eni-0a451091192a33fc1",
            "private_ip": "10.0.4.210",
            "public_ip": "52.205.159.183",
            "subnet_id": "subnet-0bbd4be2357d50e44",
            "tags": {
              "Name": "education-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "education-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.module.eks_infrastructure.data.aws_availability_zones.available",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_eip.nat",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_subnet.public",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.eks_infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.vpc.module.eks_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04e852a947f5b77611080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-089526bd0f3bd30fc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04e852a947f5b7761",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.eks_infrastructure.data.aws_availability_zones.available",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_eip.nat",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_route_table.private",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_subnet.public",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.eks_infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpc.module.eks_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fc326eaed1ad7b59",
            "id": "r-rtb-0241e5020849c26be1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0241e5020849c26be",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.eks_infrastructure.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_route_table.public",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.eks_infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.vpc.module.eks_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:route-table/rtb-04e852a947f5b7761",
            "id": "rtb-04e852a947f5b7761",
            "owner_id": "155988765466",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "education-vpc-private"
            },
            "tags_all": {
              "Name": "education-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cbddce6f70837e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.eks_infrastructure.data.aws_availability_zones.available",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.eks_infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc.module.eks_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:route-table/rtb-0241e5020849c26be",
            "id": "rtb-0241e5020849c26be",
            "owner_id": "155988765466",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "education-vpc-public"
            },
            "tags_all": {
              "Name": "education-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cbddce6f70837e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.eks_infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpc.module.eks_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c090e2788fd3c97d",
            "route_table_id": "rtb-04e852a947f5b7761",
            "subnet_id": "subnet-023467f8d95e5a872"
          },
          "dependencies": [
            "module.vpc.module.eks_infrastructure.data.aws_availability_zones.available",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_route_table.private",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_subnet.private",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1b977dbf9266426",
            "route_table_id": "rtb-04e852a947f5b7761",
            "subnet_id": "subnet-064cd1621e1f027c9"
          },
          "dependencies": [
            "module.vpc.module.eks_infrastructure.data.aws_availability_zones.available",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_route_table.private",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_subnet.private",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d52c463e82f690a9",
            "route_table_id": "rtb-04e852a947f5b7761",
            "subnet_id": "subnet-05b8e0fccdc64d84f"
          },
          "dependencies": [
            "module.vpc.module.eks_infrastructure.data.aws_availability_zones.available",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_route_table.private",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_subnet.private",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.eks_infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc.module.eks_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab0fb938f82ea415",
            "route_table_id": "rtb-0241e5020849c26be",
            "subnet_id": "subnet-0bbd4be2357d50e44"
          },
          "dependencies": [
            "module.vpc.module.eks_infrastructure.data.aws_availability_zones.available",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_route_table.public",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_subnet.public",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0011fdd46a016011a",
            "route_table_id": "rtb-0241e5020849c26be",
            "subnet_id": "subnet-031da1c09cb9bc5a0"
          },
          "dependencies": [
            "module.vpc.module.eks_infrastructure.data.aws_availability_zones.available",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_route_table.public",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_subnet.public",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cceff7d3b316e14",
            "route_table_id": "rtb-0241e5020849c26be",
            "subnet_id": "subnet-09db8fbaa952b4aeb"
          },
          "dependencies": [
            "module.vpc.module.eks_infrastructure.data.aws_availability_zones.available",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_route_table.public",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_subnet.public",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.eks_infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpc.module.eks_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:subnet/subnet-023467f8d95e5a872",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023467f8d95e5a872",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "155988765466",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-private-us-east-1a",
              "kubernetes.io/cluster/education-eks-zwtRvQkH": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-private-us-east-1a",
              "kubernetes.io/cluster/education-eks-zwtRvQkH": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02cbddce6f70837e0"
          },
          "dependencies": [
            "module.vpc.module.eks_infrastructure.data.aws_availability_zones.available",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:subnet/subnet-064cd1621e1f027c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064cd1621e1f027c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "155988765466",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-private-us-east-1b",
              "kubernetes.io/cluster/education-eks-zwtRvQkH": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-private-us-east-1b",
              "kubernetes.io/cluster/education-eks-zwtRvQkH": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02cbddce6f70837e0"
          },
          "dependencies": [
            "module.vpc.module.eks_infrastructure.data.aws_availability_zones.available",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:subnet/subnet-05b8e0fccdc64d84f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b8e0fccdc64d84f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "155988765466",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-private-us-east-1c",
              "kubernetes.io/cluster/education-eks-zwtRvQkH": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-private-us-east-1c",
              "kubernetes.io/cluster/education-eks-zwtRvQkH": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02cbddce6f70837e0"
          },
          "dependencies": [
            "module.vpc.module.eks_infrastructure.data.aws_availability_zones.available",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.eks_infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc.module.eks_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:subnet/subnet-0bbd4be2357d50e44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbd4be2357d50e44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "155988765466",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-public-us-east-1a",
              "kubernetes.io/cluster/education-eks-zwtRvQkH": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-public-us-east-1a",
              "kubernetes.io/cluster/education-eks-zwtRvQkH": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02cbddce6f70837e0"
          },
          "dependencies": [
            "module.vpc.module.eks_infrastructure.data.aws_availability_zones.available",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:subnet/subnet-031da1c09cb9bc5a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031da1c09cb9bc5a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "155988765466",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-public-us-east-1b",
              "kubernetes.io/cluster/education-eks-zwtRvQkH": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-public-us-east-1b",
              "kubernetes.io/cluster/education-eks-zwtRvQkH": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02cbddce6f70837e0"
          },
          "dependencies": [
            "module.vpc.module.eks_infrastructure.data.aws_availability_zones.available",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:subnet/subnet-09db8fbaa952b4aeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09db8fbaa952b4aeb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "155988765466",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-public-us-east-1c",
              "kubernetes.io/cluster/education-eks-zwtRvQkH": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-public-us-east-1c",
              "kubernetes.io/cluster/education-eks-zwtRvQkH": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02cbddce6f70837e0"
          },
          "dependencies": [
            "module.vpc.module.eks_infrastructure.data.aws_availability_zones.available",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc.this",
            "module.vpc.module.eks_infrastructure.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.eks_infrastructure.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.eks_infrastructure.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.vpc.module.eks_infrastructure.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:vpc/vpc-02cbddce6f70837e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06db35de34c018e7c",
            "default_route_table_id": "rtb-0755ec2834aa5212c",
            "default_security_group_id": "sg-0d5c84d3913725089",
            "dhcp_options_id": "dopt-0386cf88d51777301",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02cbddce6f70837e0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0755ec2834aa5212c",
            "owner_id": "155988765466",
            "tags": {
              "Name": "education-vpc"
            },
            "tags_all": {
              "Name": "education-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_project_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:internet-gateway/igw-0063a1498bae082ad",
            "id": "igw-0063a1498bae082ad",
            "owner_id": "155988765466",
            "tags": {
              "Name": "vpc_project_internet_gateway"
            },
            "tags_all": {
              "Name": "vpc_project_internet_gateway"
            },
            "vpc_id": "vpc-0618d4891c2599ff2"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_project_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:route-table/rtb-06dea8a8cf7132953",
            "id": "rtb-06dea8a8cf7132953",
            "owner_id": "155988765466",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0063a1498bae082ad",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC_project_route_table"
            },
            "tags_all": {
              "Name": "VPC_project_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0618d4891c2599ff2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.vpc_project_internet_gateway",
            "module.vpc.module.vpc.aws_vpc.vpc_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_project_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0458bb2a5ee3bae8d",
            "route_table_id": "rtb-06dea8a8cf7132953",
            "subnet_id": "subnet-0bf5569d9c598fa24"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.vpc_project_internet_gateway",
            "module.vpc.module.vpc.aws_route_table.vpc_project_routetable",
            "module.vpc.module.vpc.aws_subnet.vpc_project_subnet",
            "module.vpc.module.vpc.aws_vpc.vpc_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_project_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:security-group/sg-0e313ae31bd375be3",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e313ae31bd375be3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic to VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic to VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic to VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic to VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_project_security_group",
            "name_prefix": "",
            "owner_id": "155988765466",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "securitygroup_controll_traffic"
            },
            "tags_all": {
              "Name": "securitygroup_controll_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0618d4891c2599ff2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_project_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:subnet/subnet-0bf5569d9c598fa24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.20.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf5569d9c598fa24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "155988765466",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_project_subnet"
            },
            "tags_all": {
              "Name": "vpc_project_subnet"
            },
            "vpc_id": "vpc-0618d4891c2599ff2"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.vpc_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155988765466:vpc/vpc-0618d4891c2599ff2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0475927bd5da4b6ec",
            "default_route_table_id": "rtb-0221e7b2215bb8063",
            "default_security_group_id": "sg-04a65f1b987929382",
            "dhcp_options_id": "dopt-0386cf88d51777301",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0618d4891c2599ff2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0221e7b2215bb8063",
            "owner_id": "155988765466",
            "tags": {
              "Name": "vpc_project"
            },
            "tags_all": {
              "Name": "vpc_project"
            }
          }
        }
      ]
    }
  ]
}